Prevent wrapping on tooltip messages
Fixes billysbilling/billy-webapp#50

--- a/src/scss/_tooltip.scss
+++ b/src/scss/_tooltip.scss
@@ -12,6 +12,10 @@
         @include border-radius($standard-border-radius);
         color: #fff;
         padding: 3px 10px;
+
+        .message {
+            white-space: pre;
+        }
     
         &.tooltip-top, &.tooltip-bottom {
             .notch {
